Simplify, fix alignment

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
-  overflow: hidden;
+  /* overflow: hidden; */
   font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: #fff;
   background: #000;
-  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+  scroll-padding: 15vh;
 }
 
 ::selection {
@@ -13,23 +13,18 @@
 
 body {
   width: 100%;
-  height: 100vh;
-  font-size: clamp(1rem, 0.5rem + 1.6vw, 1.5rem);
+  display: flex;
+  font-size: clamp(1rem, 0.5rem + 1.6vw, 1.25rem);
   line-height: 1.2;
-  overflow: hidden;
   margin: 0;
 }
 
 .editor {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  box-sizing: border-box;
-  padding: 0 calc(50vw - 20em);
+  display: block;
+  padding: 0 calc(50vw - 22rem);
   border: 0 solid transparent;
-  border-width: 0 clamp(1rem, -3rem + 12.8vw, 5rem) 2.5rem;
+  border-width: 15vh 1rem 15vh;
+  min-height: calc(100vh - 15vh - 15vh);
   font: inherit;
   color: inherit;
   background: transparent;
@@ -37,21 +32,21 @@ body {
   box-shadow: none;
   outline: 0;
   border-radius: 0;
+  overflow: hidden;
   -webkit-appearance: none;
   appearance: none;
+  flex: 1;
 }
 
-.words {
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  align-items: center;
-  width: 100vw;
-  height: 2.5rem;
+.editor.clone {
   box-sizing: border-box;
-  padding: 0 1rem;
-  font-family: 'SF Mono', SFMono-Regular, ui-monospace, 'DejaVu Sans Mono', Menlo, Consolas, monospace;
-  font-size: 0.8rem;
-  background: rgba(255, 255, 255, 0.15);
+  width: 100%;
+  visibility: hidden;
   pointer-events: none;
+  position: absolute;
+  -webkit-font-smoothing: none;
+  top: 0;
+  border-top: 0;
+  border-bottom: 0;
+  z-index: -1;
 }
